[package]
name = "terrafirma-helloworld"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wee_alloc = "0.4.5"
http_guest = { git = "https://github.com/MarcoPolo/terrafirma-rust-guest" }